# rdm

./: .gitignore  Cargo.toml  PLAN.md  README.md
rdm-cli/: Cargo.toml
rdm-cli/src/: main.rs
rdm-core/: Cargo.toml
rdm-core/src/: lib.rs
rdm-desktop/: package-lock.json  package.json  tailwind.config.js
rdm-desktop/src/: App.css  App.tsx  index.css
rdm-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rdm-desktop/src-tauri/capabilities/: default.json
rdm-desktop/src-tauri/src/: lib.rs  main.rs
rdm-desktop/src/components/downloads/: add-download-dialog.tsx  download-item.tsx  download-list-item.tsx  downloads-header.tsx  index.ts
rdm-desktop/src/components/layout/: category-sidebar.tsx  download-toolbar.tsx  index.ts  sidebar.tsx  status-bar.tsx  title-bar.tsx
rdm-desktop/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  separator.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx
rdm-desktop/src/lib/: api.ts  store.ts
